--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <!-- fontawesome link  -->
     <script src="https://kit.fontawesome.com/bc15075e04.js" crossorigin="anonymous"></script>
-    <title>React App</title>
+    <title>E-Smarts</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
